# crew

./: .gitignore  Cargo.toml  README.md  install.sh
.claude/commands/: farx.md
.claude/skills/verify/: SKILL.md
.github/workflows/: release.yml
assets/icon/: crew.icns
config/: default.toml
crates/crew-app/: Cargo.toml  build.rs
crates/crew-app/src/: anim.rs  app.rs  app_tests.rs  appregister.rs  appregister_tests.rs  askaddr.rs  askbar.rs  askcast.rs  askcast_tests.rs  askclient.rs  askclient_tests.rs  askpump.rs  askpump_tests.rs  askrender.rs  askrender_tests.rs  askroute.rs  askwait.rs  attention.rs  boxdraw.rs  charrain.rs  chat.rs  chat_tests.rs  chataction.rs  chatanim.rs  chatbody.rs  chatchips.rs  chatcompact.rs  chatcomplete.rs  chatempty.rs  chatempty_tests.rs  chatevents.rs  chatexport.rs  chatflow.rs  chatflow_tests.rs  chatfont.rs  chathdr.rs  chathdr_tests.rs  chatinput.rs  chatinput_tests.rs  chatkeys.rs  (+157 more)
crates/crew-app/src/farpane/: ask.rs  bars.rs  cmdhist.rs  complete.rs  fileops.rs  fileops_tests.rs  icons.rs  keys.rs  list.rs  location.rs  location_tests.rs  mod.rs  mod_tests.rs  rclone.rs  rclone_tests.rs  remote.rs  remote_tests.rs  render.rs  render_tests.rs  run.rs
crates/crew-app/src/grid/: compose.rs  mod.rs  state.rs  tests.rs
crates/crew-app/src/md/: autolink.rs  fold.rs  inline.rs  layout.rs  layout_tests.rs  mod.rs  parse.rs  parse_tests.rs  table.rs  wrap.rs
crates/crew-app/src/settingspane/: dropdown.rs  form.rs  form_tests.rs  keys.rs  mod.rs  render.rs  render_tests.rs
crates/crew-app/src/swarm/: backend.rs  bridge.rs  mod.rs  plan.rs  tests.rs  view.rs
crates/crew-hive/: Cargo.toml
crates/crew-hive/src/: agentname.rs  lib.rs  pricing.rs
crates/crew-hive/tests/: engine.rs  planner_prompt.rs
crates/crew-plugin/: Cargo.toml
crates/crew-plugin/src/: echo.rs  host.rs  lib.rs  orchestrator.rs  protocol.rs
crates/crew-plugin/src/broker/: adapter.rs  agents.rs  apiadapter.rs  ask.rs  ask_tests.rs  checkpoint.rs  checkpoint_tests.rs  commands.rs  commands_tests.rs  constructs.rs  constructs_tests.rs  diff.rs  diff_tests.rs  discover.rs  discover_tests.rs  doctor.rs  doctor_tests.rs  engine.rs  engine_budget_tests.rs  engine_tests.rs  fan.rs  fan_tests.rs  gitmsg.rs  gitmsg_tests.rs  hop.rs  memory.rs  memory_tests.rs  mod.rs  plan.rs  plan_tests.rs  plugins.rs  plugins_tests.rs  registry.rs  registry_tests.rs  relay.rs  relay_tests.rs  review.rs  review_tests.rs  route.rs  route_tests.rs  (+28 more)
crates/crew-plugin/src/mcp/: client_tests.rs  mod.rs
crates/crew-plugin/tests/: e2e_discovery.rs  e2e_relay.rs  e2e_tasks.rs
crates/crew-plugin/tests/common/: mod.rs
crates/crew-render/: Cargo.toml
crates/crew-render/examples/: screenshot.rs
crates/crew-render/src/: cellgrid.rs  celltext.rs  celltext_tests.rs  crt.rs  crt.wgsl  fontlist.rs  frame.rs  gpu.rs  lib.rs  paperbg.rs  paperbg.wgsl  renderer.rs  roundborder.rs  roundborder.wgsl  scene.rs  scene_sig_tests.rs  scene_tests.rs  scenecache.rs  scenetarget.rs
crates/crew-render/tests/: crt_headless.rs  paperbg_headless.rs
crates/crew-term/: Cargo.toml
crates/crew-term/src/: color.rs  contrast.rs  cursor.rs  headless.rs  lib.rs  listener.rs  model.rs  model_tests.rs  modelcells.rs  modelsel.rs  pty.rs  pty_tests.rs  ptyscan.rs  ptyspawn.rs  ptyview.rs
crates/crew-term/tests/: env.rs  (+1 more)
crates/crew-theme/: Cargo.toml
crates/farx-ai/: Cargo.toml
crates/farx-ai/src/: agent.rs  lib.rs
crates/farx-ai/src/agent/: mod.rs  prompt.rs  query.rs  state.rs  suggest.rs  types.rs
crates/farx-app/: Cargo.toml
crates/farx-core/: Cargo.toml
crates/farx-core/src/: action.rs  config.rs  error.rs  keymap.rs  lib.rs  panel_layout.rs  tab_group.rs  tree.rs  types.rs
crates/farx-core/src/config/: ai.rs  general.rs  load.rs  mod.rs  paths.rs  ui.rs
crates/farx-core/src/grid/: compose.rs  geometry.rs  mod.rs  state.rs
crates/farx-core/src/keymap/: ctrl_combos.rs  function_keys.rs  mod.rs  navigation.rs  parse.rs  sort_tabs.rs  tests.rs  tools.rs
crates/farx-core/src/panel_layout/: mod.rs  types.rs
crates/farx-core/src/tree/: build.rs  git.rs  history.rs  mod.rs  navigation.rs  tests.rs  types.rs
crates/farx-core/src/types/: ai_tool.rs  entry.rs  mod.rs  panel_side.rs  panel_state.rs  sort.rs  tests.rs
crates/farx-core/src/update/: asset.rs  check.rs  install.rs  mod.rs  version.rs
crates/farx-fs/: Cargo.toml
crates/farx-fs/src/: archive.rs  duplicates.rs  lib.rs  local.rs  ops.rs
crates/farx-fs/src/ops/: copy.rs  delete.rs  mkdir.rs  mod.rs  move_.rs  progress.rs  tests.rs
crates/farx-plugin/: Cargo.toml
crates/farx-ui/: Cargo.toml
docs/: ARCHITECTURE.md  CREW.md  crew-ui-roadmap.md  docs.html  index.html
docs/superpowers/: nightly-loop-log.md  nightly-loop-playbook.md
docs/vision/: sentinel-network.md
scripts/: gen-icons.sh
(+317 files in other folders)
