[package]
name = "crew-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-plugin = { path = "../crew-plugin" }
crew-term = { path = "../crew-term" }
crew-render = { path = "../crew-render" }
winit.workspace = true
anyhow.workspace = true
ratatui.workspace = true
arboard = "3"
chrono = "0.4"
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
unicode-width = { workspace = true }
open = { workspace = true }
trash = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
crew-hive = { path = "../crew-hive" }
crew-theme = { path = "../crew-theme" }
tokio = { workspace = true }
self_update = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

# setsid(2) for `--detach` (new session, so a closed terminal can't SIGHUP us).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
