[package]
name = "crew-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crew"
path = "src/main.rs"

[dependencies]
crew-plugin = { path = "../crew-plugin" }
crew-term = { path = "../crew-term" }
crew-render = { path = "../crew-render" }
winit.workspace = true
anyhow.workspace = true
ratatui.workspace = true
arboard = "3"
chrono = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
unicode-width = { workspace = true }
open = { workspace = true }
trash = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
crew-hive = { path = "../crew-hive" }
crew-theme = { path = "../crew-theme" }
tokio = { workspace = true }
self_update = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

# setsid(2) for `--detach` (new session, so a closed terminal can't SIGHUP us).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Start-menu shortcut writer (pure Rust, no COM) for `install-app`.
[target.'cfg(windows)'.dependencies]
mslnk = "0.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Runtime Dock icon (terminal launches have no bundle identity).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSData"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSApplication", "NSImage", "NSResponder"] }

[dev-dependencies]
tempfile = "3"
# Offscreen render check (`swarm_shot`, #[ignore]d): draws a real mid-run chat
# pane through the same CellGrid the app uses and writes a PNG, so the layout
# can be verified with real fonts and no window — the GUI harness needs macOS
# Accessibility + Screen Recording, which CI and headless sessions lack.
wgpu.workspace = true
pollster = "0.4"
