[package]
name = "farx-ai"
version.workspace = true
edition.workspace = true

[dependencies]
farx-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
